initial design of task manager service

--- a/src/2.Services/Task.Manager/Task.Manager.Contracts/Task.Manager.Contracts.csproj
+++ b/src/2.Services/Task.Manager/Task.Manager.Contracts/Task.Manager.Contracts.csproj
@@ -4,5 +4,11 @@
     <PackageReference Include="FluentValidation.AspNetCore" />
     <PackageReference Include="MediatR" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commons\Entities\" />
+    <Folder Include="Commons\Enums\" />
+    <Folder Include="TaskManagement\Command\" />
+    <Folder Include="TaskManagement\Queries\" />
+  </ItemGroup>
 
 </Project>
