--- a/src/2.Services/Task.Manager/Task.Manager.Service/Task.Manager.Service.csproj
+++ b/src/2.Services/Task.Manager/Task.Manager.Service/Task.Manager.Service.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <Folder Include="Application\TaskManagement\CommandHandlers\" />
+    <Folder Include="Application\TaskManagement\QueryHandlers\" />
     <Folder Include="Domain\Enums\" />
+    <Folder Include="Domain\Entities\" />
+    <Folder Include="Infrastructure\Data\Migrations\" />
     <Folder Include="Infrastructure\Services\Extensions\" />
   </ItemGroup>
 
